Actions
Bug #10130
closedsmatch fixes for usr/src/cmd/fm
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
smatch identified a couple of use after frees, and one other lint.
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit b1f626711b7485860ff0a6eb5e6edc949958f605
commit b1f626711b7485860ff0a6eb5e6edc949958f605 Author: John Levon <john.levon@joyent.com> Date: 2019-02-01T19:02:52.000Z 10130 smatch fixes for usr/src/cmd/fm Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions