10130 smatch fixes for usr/src/cmd/fm Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Richard Lowe <richlowe@richlowe.net>