usr/src/cmd/fm/notify/snmp-notify/common/snmp-notify.c
@@ -23,6 +23,10 @@
  * Copyright (c) 2010, Oracle and/or its affiliates. All rights reserved.
  */
 
+/*
+ * Copyright (c) 2018, Joyent, Inc.
+ */
+
 #include <sys/fm/protocol.h>
 #include <fm/fmd_snmp.h>
 #include <fm/fmd_msg.h>
@@ -577,7 +581,7 @@ main(int argc, char *argv[])
 				break;
 			default:
 				free(nhdl);
-				return (usage(nhdl->nh_pname));
+				return (usage(argv[0]));
 			}
 		}
 	}
